--- a/ansible_collections/arista/avd/roles/eos_designs/templates/base/local-users.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/base/local-users.j2
@@ -1,13 +1,15 @@
 local_users:
-{% for local_user in local_users | arista.avd.natural_sort %}
-  {{ local_user }}:
-    privilege: {{ local_users[local_user].privilege }}
-{%     if local_users[local_user].role is defined %}
-    role: {{ local_users[local_user].role }}
-{%      endif %}
-{%    if local_users[local_user].sha512_password is defined %}
-    sha512_password: {{ local_users[local_user].sha512_password }}
-{%     elif local_users[local_user].no_password is defined and local_users[local_user].no_password == True %}
-    no_password: {{ local_users[local_user].no_password }}
-{%      endif %}
+{% for local_user in local_users | arista.avd.convert_dicts | arista.avd.natural_sort('name') %}
+  {{ local_user.name }}:
+{%     if local_user.privilege is arista.avd.defined %}
+    privilege: {{ local_user.privilege }}
+{%     endif %}
+{%     if local_user.role is arista.avd.defined %}
+    role: {{ local_user.role }}
+{%     endif %}
+{%     if local_user.sha512_password is arista.avd.defined %}
+    sha512_password: {{ local_user.sha512_password }}
+{%     elif local_user.no_password is arista.avd.defined(true) %}
+    no_password: true
+{%     endif %}
 {% endfor %}
