--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/port-channel-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/port-channel-interfaces.j2
@@ -282,8 +282,14 @@ interface {{ port_channel_interface.name }}
 {%     if port_channel_interface.pim.ipv4.sparse_mode is arista.avd.defined(true) %}
    pim ipv4 sparse-mode
 {%     endif %}
+{%     if port_channel_interface.pim.ipv4.hello_interval is arista.avd.defined %}
+   pim ipv4 hello interval {{ port_channel_interface.pim.ipv4.hello_interval }}
+{%     endif %}
 {%     if port_channel_interface.pim.ipv4.dr_priority is arista.avd.defined %}
    pim ipv4 dr-priority {{ port_channel_interface.pim.ipv4.dr_priority }}
+{%     endif %}
+{%     if port_channel_interface.pim.ipv4.join_prune_interval is arista.avd.defined %}
+   pim ipv4 join-prune interval {{ port_channel_interface.pim.ipv4.join_prune_interval }}
 {%     endif %}
 {%     if port_channel_interface.vmtracer is arista.avd.defined(true) %}
    vmtracer vmware-esx
